# srum-forensic

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  crates.js  deny.toml  help.html  index.html  mkdocs.yml  release-plz.toml  renovate.json  settings.html  src-files.js
.githooks/: install.sh  pre-commit
.github/workflows/: ci.yml  docs.yml  gui-distribute.yml  gui-release.yml  release-plz.yml
crates/ese-carver/: Cargo.toml
crates/ese-carver/src/: lib.rs
crates/ese-carver/tests/: fixtures.rs  fragment_tests.rs
crates/ese-core/: Cargo.toml
crates/ese-core/src/: catalog.rs  database.rs  error.rs  header.rs  lib.rs  page.rs  record.rs
crates/ese-core/tests/: btree_catalog_tests.rs  btree_tests.rs  catalog_tests.rs  checksum_tests.rs  cursor_tests.rs  fixtures.rs  mmap_tests.rs  record_tests.rs  robustness_tests.rs  table_columns_tests.rs
crates/ese-integrity/: Cargo.toml
crates/ese-integrity/src/: lib.rs
crates/ese-integrity/tests/: canonical_finding_tests.rs  fixtures.rs  integrity_tests.rs  robustness_tests.rs
crates/ese-test-fixtures/: Cargo.toml
crates/ese-test-fixtures/src/: lib.rs
crates/ese-test-fixtures/tests/: builder_tests.rs
crates/forensicnomicon/: Cargo.toml
crates/sr-cli/: Cargo.toml
crates/sr-cli/src/: main.rs
crates/sr-cli/src/cmd/: analysis.rs  forensics.rs
crates/sr-cli/tests/: cli_tests.rs
crates/srum-analysis/: Cargo.toml
crates/srum-analysis/src/: enrich.rs  findings.rs  lib.rs  pipeline.rs  record.rs
crates/srum-analysis/src/analysis/: compare.rs  gaps.rs  hunt.rs  mod.rs  sessions.rs  stats.rs
crates/srum-analysis/tests/: finding_card_tests.rs  real_analysis_tests.rs
crates/srum-cli/: Cargo.toml
crates/srum-cli/src/: main.rs  output.rs
crates/srum-cli/src/cmd/: analysis.rs  forensics.rs  mod.rs  tables.rs
crates/srum-cli/tests/: cli_tests.rs
crates/srum-core/: Cargo.toml
crates/srum-core/src/: app_timeline.rs  app_usage.rs  connectivity.rs  energy.rs  energy_lt.rs  id_map.rs  lib.rs  network.rs  push_notification.rs
crates/srum-gui/: index.html  package-lock.json  package.json
crates/srum-gui/src-tauri/: Cargo.toml
crates/srum-gui/src-tauri/capabilities/: default.json
crates/srum-gui/src-tauri/icons/: icon.icns
crates/srum-gui/src-tauri/src/: commands.rs  lib.rs  main.rs  timeline.rs
crates/srum-parser/: Cargo.toml
crates/srum-parser/src/: app_timeline.rs  app_usage.rs  connectivity.rs  energy.rs  energy_lt.rs  id_map.rs  lib.rs  network.rs  push_notification.rs
crates/srum-parser/tests/: absent_table_tests.rs  app_tests.rs  error_tests.rs  fixtures.rs  idmap_tests.rs  network_tests.rs  real_srudb_tests.rs
crates/srum-schema/: Cargo.toml
docs/: index.md  privacy.md  terms.md  validation-report.md
docs/decisions/: 0001-multi-crate-suite-split.md  0002-parse-over-published-ese-engine.md  0003-raw-leaf-tag-record-decoding.md  0004-knowledge-as-code-forensicnomicon.md  0005-canonical-report-findings.md  0006-jiff-timestamps.md  0007-naming-grammar-srum4n6.md
docs/plans/: 2026-05-10-srum-examiner-gui-design.md  2026-05-10-srum-examiner-gui-impl.md
docs/user-stories/: ese-btree-walk.json  ese-catalog.json  ese-page-header.json  ese-page-tags.json  srum-app-parsing.json  srum-idmap.json  srum-network-parsing.json
ese_carver/: all.html  fn.detect_fragments.html  fn.detect_fragments_db.html  fn.parse_tags_raw.html  fn.reconstruct_fragment.html  index.html  sidebar-items.js  struct.FragmentPair.html
ese_core/: all.html  fn.open.html  index.html  sidebar-items.js
ese_core/catalog/: fn.le_u32_at.html  index.html  sidebar-items.js  struct.CatalogEntry.html
ese_core/database/: index.html  sidebar-items.js  struct.EseDatabase.html  struct.TableCursor.html
ese_core/error/: enum.EseError.html  index.html  sidebar-items.js
ese_integrity/: all.html  constant.ESE_DEFAULT_PAGE_SIZE.html  constant.ESE_MIN_BYTES.html  constant.XOR_CHECKSUM_SEED.html  enum.EseStructuralAnomaly.html  enum.Severity.html  fn.anomalies_at_least.html  fn.check_dirty_state.html  fn.detect_autoinc_gaps.html  fn.detect_orphaned_catalog.html  fn.detect_timestamp_skew.html  fn.find_deleted_records.html  fn.full_scan.html  fn.scan_slack_regions.html  fn.verify_page_checksums.html  fn.xor_page_checksum.html  fn.xor_page_checksum_ese.html  index.html  sidebar-items.js  struct.EseIntegrity.html
scripts/ralph/: log.md  (+2 more)
search.index/: 006a92ece2.js  008d648bbb.js  00a1cc9ce5.js  01999d89c6.js  01b7166c70.js  02b1f5c548.js  03c7d91d70.js  0505e6cf81.js  0581b92834.js  0583581d1d.js  05c4379c0b.js  071b8c9eae.js  073047047a.js  082322578b.js  097b554d95.js  097f05dbac.js  098a96ea95.js  0b697d2ead.js  0bd9285a77.js  0ce5490c3a.js  0da6338473.js  0fa49df036.js  0fbd3b7a72.js  104877610c.js  11ec9952f7.js  13110f57b5.js  131fae3c37.js  1403867ec2.js  1513585884.js  174d8313f2.js  1846753df0.js  186e9d4478.js  18793af596.js  188dd2b79b.js  190a804955.js  1a4f3c032f.js  1dc394809a.js  1e07fa2ffd.js  1f026101ab.js  1f35fa2e9e.js  (+127 more)
sr/: all.html  enum.Cmd.html  fn.main.html  fn.run.html  index.html  sidebar-items.js  struct.Cli.html
srum_analysis/: all.html  index.html  sidebar-items.js
srum_core/: all.html  constant.APP_RECORD_SIZE.html  constant.APP_TIMELINE_RECORD_SIZE.html  constant.ENERGY_RECORD_SIZE.html  constant.FILETIME_EPOCH_OFFSET.html  constant.ID_MAP_MIN_SIZE.html  constant.NETWORK_CONNECTIVITY_RECORD_SIZE.html  constant.NETWORK_RECORD_SIZE.html  constant.PUSH_NOTIFICATION_RECORD_SIZE.html  fn.filetime_to_datetime.html  fn.ole_date_to_datetime.html  index.html  sidebar-items.js
srum_parser/: all.html  enum.SrumError.html  fn.collect_table.html  fn.parse_app_timeline.html  fn.parse_app_usage.html  fn.parse_energy_lt.html  fn.parse_energy_usage.html  fn.parse_id_map.html  fn.parse_network_connectivity.html  fn.parse_network_usage.html  fn.parse_push_notifications.html  index.html  sidebar-items.js
srum_schema/: all.html  fn.all_srum_tables.html  fn.srum_column_defs.html  fn.srum_table_name.html  index.html  sidebar-items.js  struct.SrumColumnDef.html  struct.SrumTableInfo.html
supply-chain/: config.toml
(+366 files in other folders)
