[workspace]
resolver = "2"
members = [
    "crates/ese-core",
    "crates/ese-integrity",
    "crates/ese-carver",
    "crates/ese-test-fixtures",
    "crates/srum-core",
    "crates/srum-parser",
    "crates/srum-schema",
    "crates/srum-analysis",
    "crates/srum-cli",
    "crates/srum-gui/src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["Albert Hui <albert@securityronin.com>"]

[workspace.dependencies]
# Binary parsing
binrw = "0.14"

# Memory-mapped I/O
memmap2 = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
tempfile = "3"

# Internal
ese-core          = { path = "crates/ese-core", version = "0.1.0" }
ese-integrity     = { path = "crates/ese-integrity" }
ese-test-fixtures = { path = "crates/ese-test-fixtures" }
forensicnomicon   = "0.5.0"
srum-core         = { path = "crates/srum-core", version = "0.1.0" }
srum-parser       = { path = "crates/srum-parser", version = "0.1.0" }
srum-schema       = { path = "crates/srum-schema" }
srum-analysis     = { path = "crates/srum-analysis", version = "0.2.0" }

# GUI
tauri               = { version = "2" }
tauri-build         = { version = "2" }
tauri-plugin-dialog = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
map_unwrap_or = "allow"
items_after_statements = "allow"
implicit_hasher = "allow"
similar_names = "allow"
return_self_not_must_use = "allow"
# clippy >= 1.96; these fixtures encode ESE tag words from decimal sizes/offsets,
# where decimal operands read more clearly than forced hex.
decimal_bitwise_operands = "allow"
