[package]
name = "ese-core"
version = "0.1.0"
description = "ESE (Extensible Storage Engine) database binary format reader"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
