[package]
name = "sr-cli"
version = "0.1.0"
description = "sr — SRUM forensic analysis CLI"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sr"
path = "src/main.rs"

[dependencies]
srum-analysis.workspace = true
srum-parser.workspace = true
srum-core.workspace = true
ese-core.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true }
csv.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
