[package]
name = "srum-cli"
version = "0.1.0"
description = "srum4n6 — SRUM forensic analysis CLI"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "srum4n6"
path = "src/main.rs"

[dependencies]
srum-analysis.workspace = true
srum-parser.workspace = true
ese-core.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true }
csv.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
