[package]
name = "srum-core"
version = "0.1.0"
description = "SRUM (System Resource Usage Monitor) record type definitions"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
