[package]
name = "srum-parser"
version = "0.1.0"
description = "SRUDB.dat parser — reads SRUM records from ESE database files"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ese-core.workspace = true
forensicnomicon.workspace = true
srum-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
ese-test-fixtures.workspace = true
tempfile.workspace = true

[lints]
workspace = true
