[package]
name = "srum-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "SRUM Examiner — graphical SRUM forensic investigation tool"

[lib]
name = "sr_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "srum-gui"
path = "src/main.rs"

[dependencies]
tauri               = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
srum-analysis       = { workspace = true }
anyhow              = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[lints]
workspace = true
